modificaciones readme y eslint

--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <title>LaboratoriaAdmin</title>
@@ -37,8 +37,8 @@
           <div class="sidebar-header d-flex align-items-center">
             <div class="avatar"><img src="../img/avatar-5.jpg"  class="img-fluid rounded-circle"></div>
             <div class="title">
-              <h1 class="h4">Jane Doe</h1>
-              <p>Web Developer</p>
+              <h1 class="h4">Lucile Baratier</h1>
+              <p>Tranning Manager</p>
             </div>
           </div>
           <span class="heading">Opciones  </span>
@@ -123,7 +123,7 @@
                 <div class="chart col-lg-3 col-12">
                   <div class="statistic d-flex align-items-center bg-white has-shadow">
                     <div class="icon bg-blue"><i class="fa fa-bar-chart-o"></i></div>
-                    <div class="text"><strong id="percentaje-general">99.9%</strong><br><small>Porcentaje de avance general</small></div>
+                    <div class="text"><strong id="percentaje-general"></strong><br><small>Porcentaje de avance general</small></div>
                   </div>
                   <div class="statistic d-flex align-items-center bg-white has-shadow">
                     <div class="icon bg-greenLab"><i class="fa fa-graduation-cap"></i></div>
