--- a/src/views/sedeMéxico.html
+++ b/src/views/sedeMéxico.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <title>LaboratoriaAdmin</title>
@@ -37,8 +37,8 @@
           <div class="sidebar-header d-flex align-items-center">
             <div class="avatar"><img src="../img/avatar-5.jpg"  class="img-fluid rounded-circle"></div>
             <div class="title">
-              <h1 class="h4">Jane Doe</h1>
-              <p>Web Developer</p>
+              <h1 class="h4">Lucile Baratier</h1>
+              <p>Tranning Manager</p>
             </div>
           </div>
           <span class="heading">Opciones</span>
