Corrigiendo estilos y nombres de variables

--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -207,7 +207,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      data.getDataSede('Lima');
+      data.getDataCampus('Lima');
     </script>
   </body>
 </html>
