--- a/src/views/sedeMéxico.html
+++ b/src/views/sedeMéxico.html
@@ -209,7 +209,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      data.getDataSede('México');
+      data.getDataCampus('México');
     </script>
   </body>
 </html>
