--- a/src/views/sedeSantiago.html
+++ b/src/views/sedeSantiago.html
@@ -209,7 +209,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      data.getDataSede('Santiago');
+      data.getDataCampus('Santiago');
     </script>
   </body>
 </html>
